<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_first"
        android:icon="@drawable/stockx"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_second"
        android:icon="@drawable/fender"
        android:title="@string/title_home" />

    <item
        android:id="@+id/center_hidden_nav_button"
        android:title="@string/title_home" />



    <item
        android:id="@+id/navigation_fourth"
        android:icon="@drawable/dell"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_fifth"
        android:icon="@drawable/myprotein"
        android:title="@string/title_notifications" />
</menu>