<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="com.smartshopping.demo.models.ViewState" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/successText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/success_title"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:textColor="@color/black"
                        android:text="@string/cart_total_success"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/cartTotalTextView"
                        android:layout_width="wrap_content"
                        android:text="@{viewState.total.toString()}"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginRight="2dp"
                        android:text="@string/saved"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/savedAmountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(`$%.2f`, viewState.savedAmount)}"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:textColor="@color/black"
                        android:text="@string/applied_code"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/promoCodeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewState.bestCode}"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/smartshopping_android" />

        </LinearLayout>

        <Button
            android:id="@+id/continue_to_checkout"
            style="@style/MainButton"
            android:paddingStart="24dp"
            android:paddingTop="6dp"
            android:paddingEnd="24dp"
            android:paddingBottom="6dp"
            android:text="@string/continue_to_checkout" />

    </LinearLayout>

</layout>
