<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.smartshopping.demo.models.DetectStage" />

        <variable
            name="viewState"
            type="com.smartshopping.demo.models.ViewState" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_dev"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@{viewState.shop}"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coupons:"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@{String.valueOf(viewState.promoCodes.length)}"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_total_success_dev"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@{String.format(`%.2f$`, viewState.total)}"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="@{viewState.detectStage == DetectStage.STARTED ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detect_started_dev"
                android:textAppearance="?android:textAppearanceSmall" />

            <View
                android:id="@+id/blinking_circle"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginStart="12dp"
                android:animation="@anim/blinking"
                android:background="@drawable/circle_green"
                android:paddingStart="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="@{viewState.detectStage == DetectStage.COUPON_EXTRACTED ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@{&quot;Coupon extracted - &quot; + viewState.userCode}"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:src="@{viewState.isUserCodeValid ? @drawable/valid : @drawable/invalid}" />

        </LinearLayout>


        <Button
            style="@style/MainButton"
            android:id="@+id/apply_button"
            android:layout_marginTop="16dp"
            android:text="@string/apply_button"
            android:visibility="@{(viewState.inspectOnly || viewState.promoCodes.length == 0) ? View.GONE : View.VISIBLE}" />

    </LinearLayout>
</layout>